--- a/theGameEditor/BGModel/BGModel.csproj
+++ b/theGameEditor/BGModel/BGModel.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bg_BaseModel.cs" />
     <Compile Include="ItemUse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
