--- a/theGameEditor/BGModel/BGModel.csproj
+++ b/theGameEditor/BGModel/BGModel.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bg_BaseModel.cs" />
+    <Compile Include="CommonHelper\AttributeHelper.cs" />
     <Compile Include="ItemUse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
