--- a/theGameEditor/theGameEditor/theGameEditor.csproj
+++ b/theGameEditor/theGameEditor/theGameEditor.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CompositeControllerDemo">
+      <HintPath>..\..\CompositeControllerDemo\CompositeControllerDemo\bin\Debug\CompositeControllerDemo.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
