--- a/theGameEditor/BGService/BGService.csproj
+++ b/theGameEditor/BGService/BGService.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CompositeControllerDemo">
+      <HintPath>..\..\CompositeControllerDemo\CompositeControllerDemo\bin\Debug\CompositeControllerDemo.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -41,11 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BgService.cs" />
     <Compile Include="ControBuilderHelper.cs" />
     <Compile Include="MailService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlHelper.cs" />
     <Compile Include="StaticMethod\XmlServicer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BGModel\BGModel.csproj">
+      <Project>{117031c2-4baf-45cc-8b96-b82281eb1425}</Project>
+      <Name>BGModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
