--- a/theGameEditor/BGModel/BGModel.csproj
+++ b/theGameEditor/BGModel/BGModel.csproj
@@ -42,9 +42,15 @@
   <ItemGroup>
     <Compile Include="Bg_BaseModel.cs" />
     <Compile Include="CommonHelper\AttributeHelper.cs" />
+    <Compile Include="DataEnityModel.cs" />
+    <Compile Include="Drop_Item.cs" />
+    <Compile Include="Drop_Team.cs" />
+    <Compile Include="EnergyShield.cs" />
+    <Compile Include="Equipment.cs" />
     <Compile Include="ItemUse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weapon.cs" />
+    <Compile Include="World_Drop_Complex.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
