--- a/theGameEditor/theGameEditor/theGameEditor.csproj
+++ b/theGameEditor/theGameEditor/theGameEditor.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataEnity.cs" />
+    <Compile Include="Bg_Form_Drop.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
