--- a/theGameEditor/BGService/BGService.csproj
+++ b/theGameEditor/BGService/BGService.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,6 +57,7 @@
     <ProjectReference Include="..\BGModel\BGModel.csproj">
       <Project>{117031c2-4baf-45cc-8b96-b82281eb1425}</Project>
       <Name>BGModel</Name>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
